# music-visualizer-claude

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
src/: audio_capture.cpp  audio_capture.h  audio_devices.cpp  audio_devices.h  main.cpp
